# learning_leptos

./: .gitmodules  README.md
00_template_files/: Cargo.toml
01_basic_structure/: Cargo.toml
01_basic_structure/src/: main.rs
02-00_basic_ui/src/: main.rs
02-01_collect_view_into_view/: Cargo.toml
02-01_collect_view_into_view/src/: main.rs
02_basic_ui/: Cargo.toml  index.html
02_basic_ui/src/: main.rs
03_iteration/: Cargo.toml  index.html  rust-toolchain.toml
03_iteration/src/: main.rs
04_forms_n_inputs/: Cargo.toml
04_forms_n_inputs/src/: main.rs
05_cont_flow/: Cargo.toml  index.html
05_cont_flow/src/: main.rs
05_control_flow/: index.html
06_err_handling/: Cargo.toml
06_err_handling/src/: main.rs
07_parent_child_communication/: Cargo.toml  index.html
07_parent_child_communication/src/: main.rs
08_children_to_components/: Cargo.toml
08_children_to_components/src/: main.rs
09_practice/: Cargo.toml  index.html
09_practice/src/: main.rs
09_practice_and_tips/src/: main.rs
09_practice_dynlist/src/: main.rs
10_create_effect/: Cargo.toml  index.html
11_reactivity_and_functions/: Cargo.toml
12_testing/: Cargo.toml
13_async_resources/: Cargo.toml
14_async_suspense/: Cargo.toml
15_async_transition/: Cargo.toml
16_async_actions/: Cargo.toml
17_projecting_children/: Cargo.toml
18_global_state_management/: Cargo.toml  index.html
20_router-nested_routing/: Cargo.toml  index.html
20_router-nested_routing/src/: main.rs
21_router-form/: Cargo.toml  index.html
22_metadata/: Cargo.toml  index.html
(+14 files in other folders)
