[package]
name = "router_definition"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.4.1", features = ["nightly"] }
leptos_router = { version = "0.4.1", features = ["csr"] }

#[dependencies]
#leptos = "0.3.1"
#leptos_router = { version = "0.3.1", features = ["csr"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
